src/strucvars/snapshots/scarus__strucvars__ds__test__sv_from_str@DUP-1-1000-2000.snap
---
source: src/strucvars/ds.rs
expression: sv
---
chrom: "1"
start: 1000
stop: 2000
svtype: dup
ambiguous_range: ~

